--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<!-- meta... -->
-		<title>titre</title>
+		<title>Bitcoin</title>
 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -11,19 +11,30 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+	<h3>WS /info</h3>
 	<pre>
-		<code id="demo" class="json kljs"></code>
+		<code id="info" class="json kljs"></code>
 	</pre>
-		
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">		</script>
+	<h3>WS /blockchaininfo</h3>
+	<pre>
+		<code id="blockchaininfo" class="json kljs"></code>
+	</pre>
+	<h3>WS /mininginfo</h3>
+	<pre>
+		<code id="mininginfo" class="json kljs"></code>
+	</pre>
+	<h3>WS /peerinfo</h3>
+	<pre>
+		<code id="peerinfo" class="json kljs"></code>
+	</pre>
 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">		</script>
 	<script src="../js/custom.js"></script>
+	<script type="text/javascript">homePageLoading();</script>
 
 </body>
 </html>
