--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<body>
 		<h1>Explorateur Bitcoin</h1>
 		<h2>Charly Tran / Sofia Sali / Alexandre Soldano</h2>
-		<h2>Explorateur Bitcoin</h2>
+		<p>
+			<a href="alexandresoldano.github.io/bitcoin/index.html">allo</a>
+		</p>
 	</body>
 </html>
