--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>Explorateur Bitcoin</h1>
 		<h2>Charly Tran / Sofia Sali / Alexandre Soldano</h2>
 		<p>
-			<a href="alexandresoldano.github.io/bitcoin/index.html">allo</a>
+			<a href="http://alexandresoldano.github.io/bitcoin/index.html">allo</a>
 		</p>
 	</body>
 </html>
